[package]
name = "nested-package"
version = "0.1.0"
authors = ["Kevin Rosendahl <kevindrosendahl@gmail.com>"]
publish = false

[dependencies]
bytes = "0.4"
prost = "0.4"
prost-derive = "0.4"
tower-grpc = { path = "../../" }

[build-dependencies]
tower-grpc-build = { path = "../../tower-grpc-build" }
